--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A portal created to help ANDis find and post volunteering opportunities"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto"
       rel="stylesheet"
     />
-    <title>Volunteering</title>
+    <title>Find AND Help</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
